@@ -1,3 +1,7 @@
+* 2014-08-13 - martin.herfurth@open-xchange.com
+
+ - Fix for bug 34023: Default display message for category user input.
+
 * 2014-08-13 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 34014: Adjusted example configuration to match corresponding comments 
